Only apply hover on non-touch devices; Fix column ordering on mobile team page

--- a/src/Blog/Blog.scss
+++ b/src/Blog/Blog.scss
@@ -64,10 +64,12 @@
       }
     }
 
-    &:hover {
-      // background-color: $color4;
-      * {
-        color: $color4;
+    @media (hover: hover) {
+      &:hover {
+        // background-color: $color4;
+        * {
+          color: $color4;
+        }
       }
     }
   }
