--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -91,8 +91,10 @@ header {
             padding: 1rem 0.5rem;
           }
 
-          &:hover {
-            color: $white;
+          @media (hover: hover) {
+            &:hover {
+              color: $white;
+            }
           }
         }
       }
